fix: refine layout of network list in the network setting truncate urls if necessary

--- a/packages/neuron-ui/src/components/NetworkSetting/networkSetting.module.scss
+++ b/packages/neuron-ui/src/components/NetworkSetting/networkSetting.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/mixin.scss';
+
 .container {
   display: grid;
   grid-template: 'networks' auto 'actions' auto;
@@ -22,7 +24,19 @@
     display: flex;
     align-items: center;
     pointer-events: none;
-    width: 500px;
+    .url {
+      position: relative;
+      @include text-overflow-ellipsis;
+      max-width: 650px;
+      color: #999;
+      pointer-events: none;
+      padding-right: 0.6em;
+      &:before {
+        position: absolute;
+        right: 0;
+        content: ')';
+      }
+    }
   }
   button {
     display: flex;
